lengthened home page

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,11 +1,30 @@
 .navbar {
-    background-color: rgb(25, 20, 52);
+  z-index: 10;
+}
+
+.hide-content1 {
+  background: transparent url('../cityscape.jpg') no-repeat top center fixed; background-size: cover;
+}
+
+.hide-content2{ 
+  background: transparent url('../city.jpg') no-repeat top center fixed; background-size: cover;
+}
+
+.pin {
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
 }
 
 /* Tooltip container */
 .tooltip {
   position: relative;
   display: inline-block; /* If you want dots under the hoverable text */
+}
+
+.logo {
+  height: 60px;
+  width: 70px;
 }
 
 /* Tooltip text */
@@ -32,4 +51,21 @@
 .tooltip:hover .tooltiptext {
   opacity: 1;
   visibility: visible;
+}
+
+.title:hover .title2 { color: white; }
+
+
+.title:hover .logo {
+  content :url("../bp-hover.png");
+}
+
+.text {
+  float: right;
+  padding-left: 5px;
+}
+
+.logo{
+  content :url("../bp.png");
+  float: left;
 }
