--- a/src/components/projectToolTips.css
+++ b/src/components/projectToolTips.css
@@ -1,13 +1,11 @@
+
 /* Tooltip text */
 .projtooltip .projtooltiptext {
     visibility: hidden;
-    width: 160px;
-    background-color: rgb(104, 104, 104);
-    color: #fff;
-    text-align: center;
-    padding: 5px 0;
-    border-radius: 6px;
-    opacity: 0;
+    width: 260px;
+    color: white;
+    display: inline;
+    position: relative;
     transition: opacity .25s;
    
     /* Position the tooltip text - see examples below! */
