--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,19 +1,12 @@
 .navbar {
-  z-index: 10;
-}
-
-.hide-content1 {
-  background: transparent url('../black-background.jpeg') no-repeat top center fixed; background-size: cover;
-}
-
-.hide-content2{ 
-  background: transparent url('../black-background.jpeg') no-repeat top center fixed; background-size: cover;
+  z-index: 1;
 }
 
 .pin {
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
+  background-color: black;
 }
 
 /* Tooltip container */
@@ -25,6 +18,13 @@
 .logo {
   height: 60px;
   width: 70px;
+}
+
+@media only screen and (max-width: 600px) {
+  .logo {
+    height: 30px;
+    width: 35px;
+  }
 }
 
 /* Tooltip text */
@@ -53,9 +53,12 @@
   visibility: visible;
 }
 
-.title:hover .title2 { color: #51af7f; }
+.title:hover .subtitle { color: #51af7f; }
 
-.title2 { color: #9b9b9b; }
+.subtitle { 
+  color: #9b9b9b;
+  font-size: 1vw; 
+}
 
 .title:hover .logo {
   content :url("../bp-hover.png");
@@ -65,14 +68,18 @@
   color: #51af7f;
 }
 
-.text {
+.title {
   float: right;
   padding-left: 5px;
+  font-size: 2vw;
 }
 
-.logo{
+.logo {
   content :url("../bp.png");
   float: left;
+}
+
+.navlink-item {
 }
 
 .green-text {
