--- a/src/components/page.css
+++ b/src/components/page.css
@@ -2,12 +2,35 @@
     z-index: -1;
 }
 
-.title {
+.heading {
     margin: auto;
-    padding: 10px;
+    padding-top: 10vw;
+    font-size: 10vw;
 }
 
-.green-font {
+.home-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-top: 10vh;
+}
+
+.subheading {
+    margin: auto;
+    width: 50%;
+    font-size: 20px;
+    text-align: center;
+    padding-bottom: 5vw;
+}
+
+@media only screen and (max-width: 600px) {
+    .subheading {
+        font-size: 12px;
+    }
+}
+
+.green-text {
     color: #51af7f;
 }
 
@@ -32,6 +55,13 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+@media only screen and (max-width: 1048px) {
+    .home-cards {
+        display: block;
+        text-align:center;
+    }
 }
 
 .li-space {
